--- a/client/main.css
+++ b/client/main.css
@@ -1,7 +1,8 @@
-@import url(https://fonts.googleapis.com/css?family=Raleway);
+@import url(https://fonts.googleapis.com/css?family=Roboto+Slab);
 
 html, body, button, input, select, textarea {
-    font-family: "Raleway", sans-serif;
+    font-family: "Roboto Slab", sans-serif;
+    font-weight: lighter;
 }
 
 html {
@@ -38,8 +39,10 @@ input.form-control.bias {
     margin: auto;
     border: none;
 }
-.loading {
-    display: none;
+.previewThumbnail {
+    max-height: 400px;
+    max-width: 80%;
+    display: block;
 }
 /** Helpers: **/
 .small { font-size: small; }
